Fix text alignment on footnote view

--- a/src/App.css
+++ b/src/App.css
@@ -639,6 +639,10 @@ body {
   padding: 20px;
 }
 
+.footnoteReferenceNumber {
+  vertical-align: middle;
+}
+
 .footnoteReferenceContent {
   white-space: normal;
   overflow-wrap: break-word;
